[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Player/Front.png" type="Texture" id=1]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Back.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Left.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Right.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]

[node name="Player" type="Node2D"]
position = Vector2( 0, 1.25992 )
script = ExtResource( 6 )
Front = ExtResource( 1 )
Back = ExtResource( 3 )
Left = ExtResource( 4 )
Right = ExtResource( 5 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Arrows" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="arrow_up_right" type="Sprite" parent="Arrows"]
position = Vector2( 60, -104 )
rotation = -2.61799
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )

[node name="arrow_right" type="Sprite" parent="Arrows"]
position = Vector2( 122, -1 )
rotation = -1.5708
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )

[node name="arrow_down_right" type="Sprite" parent="Arrows"]
position = Vector2( 60, 104 )
rotation = -0.523599
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )

[node name="arrow_down_left" type="Sprite" parent="Arrows"]
position = Vector2( -60, 104 )
rotation = 0.523599
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )

[node name="arrow_left" type="Sprite" parent="Arrows"]
position = Vector2( -122, -1 )
rotation = 1.5708
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )

[node name="arrow_up_left" type="Sprite" parent="Arrows"]
position = Vector2( -60.3297, -103.922 )
rotation = 2.61799
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 2 )
